<resources>
    <string name="app_name">Android-Raspberry Pi TV Controller</string>
    <!--Main TV Remote activity -->
    <string name="switch_text">TV On/Off</string>
    <string name="channelLabel">Channel</string>
    <string name="volumeLabel">Volume</string>
    <string name="volumeUpBtn">Volume +</string>
    <string name="volumeDownBtn">Volume -</string>
    <string name="channelUpBtn">Channel +</string>
    <string name="channelDownBtn">Channel -</string>

    <!--bluetooth activity strings-->
    <string name="bluetoothActivityTitle">Bluetooth</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="bluetooth_on">Turn On/Off</string>
    <string name="scanButtonText">Scan</string>
    <string name="title_activity_voice_dictation">VoiceDictationActivity</string>
    <string name="voice_dictation_instructions">"Tap here and \nspeak command..."</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
