<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.keith.android_raspberrypitvcontroller.MainTVRemoteActivity"
    android:id="@+id/main_view">


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvOnOffSwitch"
        android:layout_marginTop="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:textSize="20dp"
        android:textAlignment="viewStart"
        android:text="@string/switch_text" />

    <TextView
        android:id="@+id/switchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/switch_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/tvOnOffSwitch"
        android:layout_alignLeft="@+id/tvOnOffSwitch"
        android:layout_alignStart="@+id/tvOnOffSwitch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/volumeLabel"
        android:id="@+id/volumeText"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/volumeUpButton"
        android:layout_alignRight="@+id/volumeDownButton"
        android:layout_alignEnd="@+id/volumeDownButton"
        android:layout_alignLeft="@+id/volumeUpButton"
        android:layout_alignStart="@+id/volumeUpButton"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volumeUpBtn"
        android:id="@+id/volumeUpButton"
        android:textSize="23dp"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/volumeDownButton"
        android:layout_alignLeft="@+id/volumeDownButton"
        android:layout_alignStart="@+id/volumeDownButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volumeDownBtn"
        android:id="@+id/volumeDownButton"
        android:textSize="23dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/switchStatus"
        android:layout_alignStart="@+id/switchStatus"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/channelLabel"
        android:id="@+id/channelText"
        android:textAlignment="center"
        android:layout_alignTop="@+id/volumeText"
        android:layout_alignLeft="@+id/channelUpButton"
        android:layout_alignStart="@+id/channelUpButton"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channelUpBtn"
        android:id="@+id/channelUpButton"
        android:textSize="23dp"
        android:layout_alignTop="@+id/volumeUpButton"
        android:layout_alignRight="@+id/tvOnOffSwitch"
        android:layout_alignEnd="@+id/tvOnOffSwitch"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channelDownBtn"
        android:id="@+id/channelDownButton"
        android:textSize="23dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/channelUpButton"
        android:layout_alignStart="@+id/channelUpButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Source"
        android:id="@+id/tvSourceButton"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/channelDownButton"
        android:layout_alignLeft="@+id/channelText"
        android:layout_alignStart="@+id/channelText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Tv Source"
        android:id="@+id/textView"
        android:singleLine="true"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/tvSourceButton"
        android:layout_alignRight="@+id/volumeDownButton"
        android:layout_alignEnd="@+id/volumeDownButton"
        android:layout_alignLeft="@+id/volumeDownButton"
        android:layout_alignStart="@+id/volumeDownButton" />


</RelativeLayout>

